# backend/src/routes/user.js
@@ -1,10 +1,11 @@
 import express from 'express'
-import { registerUser, signupVerifyOtp } from '../controllers/user.js';
+import { loginWithPassword, registerUser, signupVerifyOtp } from '../controllers/user.js';
 
 const router=express.Router();
 
 router.post('/signup',registerUser);
 router.post('/verify-otp',signupVerifyOtp);
+router.post('/login',loginWithPassword);
 
 
 
